# punlick-python

./: .env.example  .gitignore  README.md  architecture.md  check_pdf.py  chromaWork.py  dataset.jsonl  dif (1).py  fix_and_process_csv.py  integration_example.py  newcode.py  price_list_service.py  price_validator_service.py  process_price_list.py  promts.py  pyproject.toml  rectangular_item_validator.py  ruff.toml  run.py  test.py  test2.py  testWorkLlm.py  test_price_list.json  test_price_list.py  vse.py  новые правила КРуглых.txt
app/: __init__.py  main.js  main.py
app/api/: routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py  document.py  rules.py
app/services/: Pasted--1--1741736569399 copy.txt  __init__.py  chat_service.py  export_service.py  ocr_service.py  price_list_service copy.py  price_list_service.py  rules_service.py  test1.py  xlsx_service.py
app/services/llms/: llm_factory.py  llm_work.py  mistral_work.py  openai_work.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
rules/: test.txt  новые правила КРуглых.txt  новые правила пряямоугольных.txt  промпт для заявки 2.txt  тестовые новые правила.txt
vectordb/: chroma.sqlite3
